Fixing #19 with CSS to make the mnobile menu invisible if the screen size shouldn't be triggering it. Does have a problem where you open the mobile menu, go back to regular view and it dissapears, but anytime you return to the mobile-view the menu will be up

--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,10 @@ h3 {
   z-index: 1;
 }
 
+.mobile-menu {
+	display: none;
+}
+
 @media screen and (max-width: 800px) {
 	.page-section {
 		flex-direction: column;
@@ -339,8 +343,15 @@ h3 {
 	  display: none;
 	}
 
-	.hamburger, .mobile-menu, .checkbox-toggle {
+	.hamburger, .checkbox-toggle {
 		display: block;
+	}
+	
+	.mobile-menu {
+		display: -webkit-box;
+	    display: -webkit-flex;
+	    display: -ms-flexbox;
+	    display: flex;
 	}
 	
 	main {
@@ -494,10 +505,6 @@ h3 {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   outline: 1px solid transparent;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
